RESOLVED FIXED115951
REGRESSION: Fixed background on ColterReed.com scrolls
https://bugs.webkit.org/show_bug.cgi?id=115951
Summary REGRESSION: Fixed background on ColterReed.com scrolls
Simon Fraser (smfr)
Reported 2013-05-10 22:27:56 PDT
REGRESSION: Fixed background on ColterReed.com scrolls
Attachments
Patch (10.36 KB, patch)
2013-05-10 22:33 PDT, Simon Fraser (smfr)
bdakin: review+
Simon Fraser (smfr)
Comment 1 2013-05-10 22:33:54 PDT
Simon Fraser (smfr)
Comment 2 2013-05-10 22:34:20 PDT
Simon Fraser (smfr)
Comment 3 2013-05-11 21:53:49 PDT
Note You need to log in before you can comment on or make changes to this bug.